fix custom radio label overflow text display

--- a/assets/css/universal.css
+++ b/assets/css/universal.css
@@ -498,10 +498,6 @@ body {
   white-space: nowrap;
 }
 
-.radio label:hover {
-  overflow: visible;
-}
-
 .rc-calendar-today-btn {
   display: none;
 }
